# pico-gallery

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  config.example.toml  create_package.sh  install.sh  picogallery.service  release.sh  run.sh  uninstall.sh
.github/workflows/: release.yml
architecture_docs/options/: display-rendering.md
core/: Cargo.toml
core/src/: lib.rs
dev/: run-photoprism-local.sh
dev/photoprism/: docker-compose.yml
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
plugins/amazon-photos/: Cargo.toml
plugins/amazon-photos/src/: lib.rs
plugins/directory/: Cargo.toml
plugins/directory/src/: lib.rs
plugins/google-photos/: Cargo.toml
plugins/google-photos/src/: lib.rs
plugins/immich/: Cargo.toml
plugins/immich/src/: lib.rs
plugins/local/: Cargo.toml
plugins/local/src/: lib.rs
plugins/photoprism/: Cargo.toml
plugins/photoprism/src/: lib.rs
plugins/usb/: Cargo.toml
plugins/usb/src/: lib.rs
plugins/webdav/: Cargo.toml
plugins/webdav/src/: lib.rs
src/: cache.rs  config.rs  display_power.rs  exif_util.rs  lib.rs  main.rs  menu.rs  night.rs  osd.rs  remote.rs  renderer.rs  sdl_metal_stubs.c  slideshow.rs  wifi.rs
tests/: config_roundtrip.rs
