[workspace]
members = [
    ".",
    "core",
    "plugins/google-photos",
    "plugins/amazon-photos",
    "plugins/local",
    "plugins/directory",
]
resolver = "2"

[workspace.dependencies]
anyhow              = "1.0"
async-trait         = "0.1"
chrono              = { version = "0.4", features = ["serde"] }
dirs                = "5"
log                 = "0.4"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
tokio               = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync", "io-util", "net", "process"] }
reqwest             = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
toml                = "0.8"
picogallery-core    = { path = "core" }

[package]
name        = "picogallery"
version = "0.0.9"
edition     = "2021"
description = "Lightweight plugin-based photo slideshow for Raspberry Pi — no desktop environment required"
license     = "MIT"
repository  = "https://github.com/kethanva/PicoGallery"
build       = "build.rs"

[lib]
name = "picogallery"
path = "src/lib.rs"

[[bin]]
name = "picogallery"
path = "src/main.rs"

[dependencies]
anyhow              = { workspace = true }
async-trait         = { workspace = true }
chrono              = { workspace = true }
dirs                = { workspace = true }
log                 = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
toml                = { workspace = true }
picogallery-core    = { workspace = true }
env_logger          = "0.11"
image               = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
fast_image_resize   = "2.7"
sdl2                = { version = "0.36", default-features = false }
clap                = { version = "4", features = ["derive", "env"] }

# Plugins (compiled in via feature flags — no cycle: plugins depend on core, not on this crate)
picogallery-google-photos = { path = "plugins/google-photos", optional = true }
picogallery-amazon-photos = { path = "plugins/amazon-photos", optional = true }
picogallery-local         = { path = "plugins/local",         optional = true }
picogallery-directory     = { path = "plugins/directory",     optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
drm = "0.15"

[build-dependencies]
cc = "1"

[features]
default              = ["plugin-google-photos", "plugin-local", "plugin-directory"]
plugin-google-photos = ["dep:picogallery-google-photos"]
plugin-amazon-photos = ["dep:picogallery-amazon-photos"]
plugin-local         = ["dep:picogallery-local"]
plugin-directory     = ["dep:picogallery-directory"]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# Faster on-device build profile for Raspberry Pi.
# Sacrifices ~30% binary size for ~3-4x faster compilation.
# Used by install.sh when building on-device (esp. Pi Zero 2 / low-RAM devices).
[profile.release-fast]
inherits      = "release"
opt-level     = 2
lto           = false
codegen-units = 16
strip         = true
panic         = "abort"
incremental   = false

[package.metadata.deb]
name = "picogallery"
maintainer = "Kethan <kethanva@gmail.com>"
copyright = "2026, Kethan"
license-file = ["LICENSE", "0"]
extended-description = """
A lightweight, plugin-based photo slideshow for Raspberry Pi.
Renders directly to the KMS/DRM framebuffer via SDL2.
Includes support for Google Drive, Amazon Photos, and local folders.
"""
depends = "libdrm2, ca-certificates, rclone"
section = "utils"
priority = "optional"
assets = [
    ["target/release/picogallery", "/usr/bin/picogallery", "755"],
    ["picogallery.service", "/lib/systemd/system/picogallery.service", "644"],
    ["LICENSE", "/usr/share/doc/picogallery/copyright", "644"],
]
