[package]
name        = "picogallery-core"
version     = "0.1.0"
edition     = "2021"
description = "Plugin trait definitions shared by all PicoGallery plugins"
license     = "MIT"

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
