[package]
name        = "picogallery-amazon-photos"
version     = "0.1.0"
edition     = "2021"
description = "Amazon Photos plugin for PicoGallery"
license     = "MIT"

[dependencies]
picogallery-core = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
chrono           = { workspace = true }
log              = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
reqwest          = { workspace = true }
dirs             = { workspace = true }
