[package]
name        = "picogallery-directory"
version     = "0.1.0"
edition     = "2021"
description = "Directory plugin for PicoGallery — serve photos from a local folder with album support"
license     = "MIT"

[dependencies]
anyhow           = { workspace = true }
async-trait      = { workspace = true }
log              = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
picogallery-core = { workspace = true }
