[package]
name        = "picogallery-google-photos"
version     = "0.3.0"
edition     = "2021"
description = "Google Photos plugin for PicoGallery (rclone backend)"
license     = "MIT"

[dependencies]
picogallery-core = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
log              = { workspace = true }
tokio            = { workspace = true }
dirs             = { workspace = true }
