[package]
name        = "picogallery-photoprism"
version     = "0.1.0"
edition     = "2021"
description = "PhotoPrism plugin for PicoGallery — streams photos from a PhotoPrism server (e.g. another Raspberry Pi)"
license     = "MIT"

[dependencies]
picogallery-core = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
chrono           = { workspace = true }
log              = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
reqwest          = { workspace = true }
