[package]
name        = "picogallery-usb"
version     = "0.1.0"
edition     = "2021"
description = "USB auto-mount and scan plugin for PicoGallery"
license     = "MIT"

[dependencies]
picogallery-core = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
log              = { workspace = true }
tokio            = { workspace = true }
